Tooltip tags fix so they wrap appropriately

--- a/frontend/src/app/shared/modules/universal-data-tooltip/components/data-tooltip/data-tooltip.component.scss
+++ b/frontend/src/app/shared/modules/universal-data-tooltip/components/data-tooltip/data-tooltip.component.scss
@@ -61,13 +61,19 @@
                 // margin-top: 2px;
                 font-size: 10px;
                 max-width: 100%;
-                display: flex-wrap;
+                display: flex;
+                flex-wrap: wrap;
 
-                p {
-                    display: inline-flex;
+                p, div {
+                    display: inline-block;
+                    width: auto;
 
                     &:not(:last-child) {
                         margin-right: 12px;
+                    }
+
+                    .tag-key {
+                        font-weight: bold;
                     }
                 }
             }
